--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 // GLOBAL COLORS
 $color-body: #ccc;
-$color-link: #eee;
+$color-link: #333;
 
 $color-negative: #D87822;
 $color-positive: #39b27c;
